--- a/QuanLyNhaHang/src/main/resources/messages.properties
+++ b/QuanLyNhaHang/src/main/resources/messages.properties
@@ -1,1 +1,38 @@
 page.size=30
+
+#title
+title.service=Service
+title.
+
+
+#validation
+#Common
+name.notnull=Name not null
+
+#Dish
+dish.price.min=The price of the dish must not be less than 100,000 VND
+dish.price.max=The price of the dish cannot be more than 500,000 VND
+
+#Service
+service.price.min=Service price is not less than 500,000 VND
+service.price.max=Service price cannot be over 30,000,000 VND
+
+#WeddingHall
+weddinghall.price.min=The lobby price must not be less than 1,000,000 VND
+weddinghall.price.max=The lobby price cannot be more than 5,000,000VND
+
+#User
+user.email.error=Email invalid
+user.email.error.empty=Please enter email
+user.email.error.alreadyExists=Email already exists
+user.name.error.empty=Please enter your name
+user.name.error=Name cannot contain special characters
+user.password.error.empty=Please enter a password
+user.password.error.length=Password must be at least 8 characters
+user.password.error.invalid=Password must contain lowercase letters, uppercase letters, numbers and special characters
+user.confirmPassword.error.notequal=Please re-enter your password
+user.birthday.error.empty=Please enter your date of birth
+user.birthday.error.age=You must be 18 years old
+user.mobile.error.length=mobile must have at least 10 numbers
+user.mobile.error.alreadyExists=phone number already exists
+user.avatar.error.empty=please choose avatar
