add api get dish

--- a/QuanLyNhaHang/src/main/resources/messages.properties
+++ b/QuanLyNhaHang/src/main/resources/messages.properties
@@ -1,8 +1,13 @@
-page.size=30
+page.size=20
 
 #title
 title.service=Service
-title.
+title.login=Login
+title.register=Register
+title.booking=Book Party Now
+title.introduce=Introduce
+title.pass=Password
+title.dont.have.account=You don't have account? Sign up here
 
 
 #validation
