--- a/QuanLyNhaHang/src/main/resources/messages_vi.properties
+++ b/QuanLyNhaHang/src/main/resources/messages_vi.properties
@@ -1,9 +1,13 @@
 page.size=20
 
+title.select.lang=vi
+title.lang.en=Tiếng Anh
+title.lang.vi=Việt Nam
+
 #title
 title.service=Service
-title.login=Login
-title.register=Register
+title.login=Đăng nhập
+title.register=Đăng ký
 title.booking=Book Party Now
 title.introduce=Introduce
 title.pass=Password
