--- a/QuanLyNhaHang/src/main/resources/messages_en.properties
+++ b/QuanLyNhaHang/src/main/resources/messages_en.properties
@@ -12,6 +12,8 @@ title.booking=Book Party Now
 title.introduce=Introduce
 title.pass=Password
 title.dont.have.account=You don't have account? Sign up here
+title.logout=Logout
+title.infor=Personal information
 
 
 #validation
