--- a/QuanLyNhaHang/src/main/resources/messages_vi.properties
+++ b/QuanLyNhaHang/src/main/resources/messages_vi.properties
@@ -5,13 +5,16 @@ title.lang.en=Tiếng Anh
 title.lang.vi=Việt Nam
 
 #title
-title.service=Service
+title.service=Dịch vụ
 title.login=Đăng nhập
 title.register=Đăng ký
-title.booking=Book Party Now
-title.introduce=Introduce
-title.pass=Password
-title.dont.have.account=You don't have account? Sign up here
+title.booking=Đặt bàn
+title.introduce=Giới thiệu
+title.pass=Mật khẩu
+title.dont.have.account=Bạn chưa có tài khoản? Đăng kí tại đây
+title.logout=Đăng xuất
+title.infor=Thông tin cá nhân
+
 
 
 #validation
@@ -31,17 +34,17 @@ weddinghall.price.min=The lobby price must not be less than 1,000,000 VND
 weddinghall.price.max=The lobby price cannot be more than 5,000,000VND
 
 #User
-user.email.error=Email invalid
-user.email.error.empty=Please enter email
-user.email.error.alreadyExists=Email already exists
-user.name.error.empty=Please enter your name
-user.name.error=Name cannot contain special characters
-user.password.error.empty=Please enter a password
-user.password.error.length=Password must be at least 8 characters
-user.password.error.invalid=Password must contain lowercase letters, uppercase letters, numbers and special characters
-user.confirmPassword.error.notequal=Please re-enter your password
-user.birthday.error.empty=Please enter your date of birth
-user.birthday.error.age=You must be 18 years old
-user.mobile.error.length=mobile must have at least 10 numbers
-user.mobile.error.alreadyExists=phone number already exists
-user.avatar.error.empty=please choose avatar
+user.email.error=Email không hợp lệ
+user.email.error.empty=Làm ơn nhập email
+user.email.error.alreadyExists=Email đã tồn tại
+user.name.error.empty=Làm ơn nhập tên
+user.name.error=Tên không được chứa kí tự đặc biệt
+user.password.error.empty=Làm ơn nhập mật khẩu
+user.password.error.length=Mật khẩu phải có tối thiểu 8 kí tự
+user.password.error.invalid=Mật khẩu phải chứ chữ thường, chữ hoa, số và kí tự đặc biệt
+user.confirmPassword.error.notequal=Làm ơn nhập lại mật khẩu
+user.birthday.error.empty=Làm ơn nhập ngày sinh
+user.birthday.error.age=Bạn phải đủ 18 tuổi
+user.mobile.error.length=Số điện thoại phải đủ 10 số
+user.mobile.error.alreadyExists=Số điện thoại đã tồn tại
+user.avatar.error.empty=Làm ơn chọn hình đại diện
