--- a/QuanLyNhaHang/src/main/resources/messages_en.properties
+++ b/QuanLyNhaHang/src/main/resources/messages_en.properties
@@ -47,3 +47,7 @@ user.birthday.error.age=You must be 18 years old
 user.mobile.error.length=mobile must have at least 10 numbers
 user.mobile.error.alreadyExists=phone number already exists
 user.avatar.error.empty=please choose avatar
+
+#index
+intro.bg=Mang vẻ nổi bật và lộng lẫy tọa lạc tại cung đường Hoàng Văn Thụ náo nhiệt bậc nhất Sài \nGòn. Trung tâm tiệc cưới The ADORA Luxury được xây dựng theo hình dáng của viên kim cương sang\ntrọng. Cả tòa nhà mang phong cách châu Âu với 6 sảnh tiệc rộng lớn cùng sức chứa lên đến 3.500\nkhách.
+
