--- a/QuanLyNhaHang/src/main/resources/messages_en.properties
+++ b/QuanLyNhaHang/src/main/resources/messages_en.properties
@@ -50,4 +50,30 @@ user.avatar.error.empty=please choose avatar
 
 #index
 intro.bg=Mang vẻ nổi bật và lộng lẫy tọa lạc tại cung đường Hoàng Văn Thụ náo nhiệt bậc nhất Sài \nGòn. Trung tâm tiệc cưới The ADORA Luxury được xây dựng theo hình dáng của viên kim cương sang\ntrọng. Cả tòa nhà mang phong cách châu Âu với 6 sảnh tiệc rộng lớn cùng sức chứa lên đến 3.500\nkhách.
-
+intro.1= Đẳng cấp và sang trọng
+intro.order= Đặt tiệc
+intro.adora.intro=Đẳng cấp cho những điều quan trọng nhất
+intro.main=The ADORA Nguyễn Kiệm có vị trí vô cùng thuận tiện, tọa lạc ngay giao lộ huyết mạch Phạm\nVăn Đồng tiếp nối các quận huyện trung tâm thành phố. The ADORA Nguyễn Kiệm được thiết kế theo phong\ncách kiến trúc La Mã với các sảnh đường rộng lớn, được lựa chọn cho những buổi sự kiện trọng đại, từ/ntiệc cưới, tiệc cá nhân tới các Hội nghị, hội thảo đẳng cấp.
+intro.adora=The Adora
+intro.menu=Menu
+intro.appetizer=Món khai vị
+intro.dishes.main=Món chính
+intro.dishes.dessert=Món tráng miệng
+intro.slide.p1=Thoải mái như ở nhà
+intro.slide.h1=Sang trọng và lộng lẫy
+intro.slide.view=Xem thư viện ảnh
+intro.slide.p2=Hội nghị
+intro.slide.h2=Đẳng cấp - Sang trọng 
+intro.slide.p3=Tiệc cưới
+intro.slide.h3=Bắt trọn từng khoảng khắc
+intro.slide.p4=Menu
+intro.slide.h4=Đa dạng và đẳng cấp
+intro.slide.p5=Dịch vụ
+intro.slide.h5=Chu đáo - Chuyên nghiệp
+intro.col.wed=Tiệc cưới
+intro.col.wed.h=Chưa nghĩ ra
+intro.col.book=Đặt bàn ngay
+intro.col.Conference=Hội nghị
+intro.col.Conference.h= Chưa nghĩ ra luôn
+intro.col.event=Sự kiện
+intro.col.event.h=Như 2 cái bên
