--- a/QuanLyNhaHang/src/main/resources/messages_vi.properties
+++ b/QuanLyNhaHang/src/main/resources/messages_vi.properties
@@ -54,7 +54,6 @@ user.avatar.error.empty=Làm ơn chọn hình đại diện
 #index
 intro.bg=Mang vẻ nổi bật và lộng lẫy tọa lạc tại cung đường Hoàng Văn Thụ náo nhiệt bậc nhất Sài \nGòn. Trung tâm tiệc cưới The ADORA Luxury được xây dựng theo hình dáng của viên kim cương sang\ntrọng. Cả tòa nhà mang phong cách châu Âu với 6 sảnh tiệc rộng lớn cùng sức chứa lên đến 3.500\nkhách.
 intro.1= Đẳng cấp và sang trọng
-intro.2=Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.
 intro.order= Đặt tiệc
 intro.adora.intro=Đẳng cấp cho những điều quan trọng nhất
 intro.main=The ADORA Nguyễn Kiệm có vị trí vô cùng thuận tiện, tọa lạc ngay giao lộ huyết mạch Phạm\nVăn Đồng tiếp nối các quận huyện trung tâm thành phố. The ADORA Nguyễn Kiệm được thiết kế theo phong\ncách kiến trúc La Mã với các sảnh đường rộng lớn, được lựa chọn cho những buổi sự kiện trọng đại, từ/ntiệc cưới, tiệc cá nhân tới các Hội nghị, hội thảo đẳng cấp.
@@ -81,3 +80,36 @@ intro.col.Conference=Hội nghị
 intro.col.Conference.h= Chưa nghĩ ra luôn
 intro.col.event=Sự kiện
 intro.col.event.h=Như 2 cái bên
+
+#order
+order.book.party=ĐẶT TIỆC 
+order.book.info=Thông tin đơn đặt
+order.book.type=Loại tiệc
+order.book.choose=Chọn...
+order.book.wedding=Tiệc cưới
+order.book.conference=Hội nghị
+order.book.event=Sự kiện
+order.valid.choose=Vui lòng chọn loại tiệc
+order.book.date=Ngày tổ chức
+order.type.day.1=Sáng
+order.type.day.2=Trưa
+order.type.day.3=Tối
+order.book.time=Thời gian
+order.valid.time=Vui lòng nhập thời gian tổ chức
+order.book.count=Số lượng bàn
+oder.valid.count=Vui lòng nhập số lượng bàn
+order.book.note=Ghi chú
+order.book.total=Tổng (VNĐ)
+order.continue=Tiếp tục
+order.dish.drink=Đồ uống
+order.choose.service=Chọn dịch vụ
+order.hall.name=Một chiếc sảnh thật lung linh
+order.hall.describe=Chúng tôi có đa dạng sự lựa chọn
+order.hall.addbtn=Khám phá nào
+order.menu.create=Lên thực đơn
+order.menu=thực đơn
+order.hall.capacity=Sức chứa
+order.hall.price=Giá
+order.choose.hall=Chọn sảnh này
+order.hall.title=Chọn sảnh cưới
+order.close=Đóng
