--- a/QuanLyNhaHang/src/main/resources/messages_en.properties
+++ b/QuanLyNhaHang/src/main/resources/messages_en.properties
@@ -96,3 +96,5 @@ intro.col.Conference.h= Chưa nghĩ ra luôn
 intro.col.event=Sự kiện
 intro.col.event.h=Như 2 cái bên
 
+
+weddinghall.status=Lobby is under repair
