--- a/QuanLyNhaHang/src/main/resources/messages_vi.properties
+++ b/QuanLyNhaHang/src/main/resources/messages_vi.properties
@@ -129,3 +129,5 @@ order.hall.price=Giá
 order.choose.hall=Chọn sảnh này
 order.hall.title=Chọn sảnh cưới
 order.close=Đóng
+
+weddinghall.status=Sảnh đang trong tình trạng sửa chữa
