Update staff ui

--- a/QuanLyNhaHang/src/main/resources/messages_vi.properties
+++ b/QuanLyNhaHang/src/main/resources/messages_vi.properties
@@ -98,6 +98,7 @@ profile.edit=Chỉnh sửa
 profile.cancel=Thoát
 
 #order
+order.service=Dịch vụ
 order.book.party=ĐẶT TIỆC 
 order.book.info=Thông tin đơn đặt
 order.book.type=Loại tiệc
@@ -129,3 +130,18 @@ order.hall.price=Giá
 order.choose.hall=Chọn sảnh này
 order.hall.title=Chọn sảnh cưới
 order.close=Đóng
+#staff
+header.staff.dishes=Món ăn
+header.staff.hall=Tất cả sảnh
+header.staff.order=Đơn đặt tiệc
+header.staff.service=Dịch vụ
+
+#footer
+footer.contact=Liên hệ
+footer.mobile=0947549001
+footer.email=info@adora.com
+footer.where=Địa điểm
+footer.map=371 Nguyễn Kiệm - Gò Vấp - Hồ Chí Minh
+footer.social=Mạng xã hội
+footer.social.link=facebook.com/adoraVietNam
+footer.copyright=© Copyright 2018 Pingendo - All rights reserved. 
