Update Admin manage wwedding-hall

--- a/QuanLyNhaHang/src/main/resources/messages_vi.properties
+++ b/QuanLyNhaHang/src/main/resources/messages_vi.properties
@@ -148,4 +148,26 @@ footer.social.link=facebook.com/adoraVietNam
 footer.copyright=© Copyright 2018 Pingendo - All rights reserved. 
 
 weddinghall.status=Sảnh đang trong tình trạng sửa chữa
+#admin
+header.admin.staff=Quản lý nhân viên
+header.admin.dishes=Quản lý món ăn 
+header.admin.service= Quản lý dịch vụ
+header.admin.order=Quản lý đơn đặt
+header.admin.report=Thống kê
+header.admin.hall=Quản lý sảnh
+admin.hall.search=Tìm kiếm sảnh
+admin.hall.add=Thêm sảnh
+admin.hall.edit=Chỉnh sửa
+admin.label.close=Đóng
+admin.label.namehall=Tên sảnh cưới
+admin.hall.typehall=Nhập sảnh cưới
+admin.hall.price=Giá [VNĐ]
+admin.hall.inputprice=Nhập mức giá
+admin.hall.describe=Thông tin thêm
+admin.hall.typedescribe=Nhập thông tin mô tả
+admin.hall.capacity=Sức chứa (bàn)
+admin.hall.typecapacity=Sức chứa
+admin.hall.image=Ảnh mô tả
+admin.save=Lưu
+admin.delete=Xóa
 
