--- a/QuanLyNhaHang/src/main/resources/messages_vi.properties
+++ b/QuanLyNhaHang/src/main/resources/messages_vi.properties
@@ -170,4 +170,8 @@ admin.hall.typecapacity=Sức chứa
 admin.hall.image=Ảnh mô tả
 admin.save=Lưu
 admin.delete=Xóa
+admin.dishes.name=Tên món ăn
+admin.dishes.typeName=Nhập tên món ăn
+admin.dishes.category=Loại món ăn
+admin.dishes.add=Thêm món 
 
