--- a/QuanLyNhaHang/src/main/resources/messages_vi.properties
+++ b/QuanLyNhaHang/src/main/resources/messages_vi.properties
@@ -134,7 +134,7 @@ footer.social.link=facebook.com/adoraVietNam
 footer.copyright=© Copyright 2018 Pingendo - All rights reserved. 
 weddinghall.status=Sảnh đang trong tình trạng sửa chữa
 #admin
-header.admin.staff=Quản lý nhân viên
+header.admin.staff=Quản lý tài khoản
 header.admin.dishes=Quản lý món ăn 
 header.admin.service=Quản lý dịch vụ
 header.admin.order=Quản lý đơn đặt
@@ -143,7 +143,7 @@ header.admin.hall=Quản lý sảnh
 admin.hall.search=Tìm kiếm sảnh
 admin.hall.add=Thêm sảnh
 admin.hall.edit=Chỉnh sửa
-admin.label.close=Đóng
+admin.label.view=Chi tiết
 admin.label.namehall=Tên sảnh cưới
 admin.hall.typehall=Nhập sảnh cưới
 admin.hall.price=Giá [VNĐ]
@@ -162,4 +162,10 @@ admin.dishes.add=Thêm món
 admin.service.name=Tên dịch vụ
 admin.service.typename=Nhập tên dịch vụ
 admin.service.add=Thêm dịch vụ
+admin.account.user=Nhan vien
+admin.account.cus=Khach hang
+admin.name=Tên
+admin.birthday=Ngày sinh
+admin.mobile=Điện thoại
+admin.email=Email
 
