payment,order,profile

--- a/QuanLyNhaHang/src/main/resources/messages_en.properties
+++ b/QuanLyNhaHang/src/main/resources/messages_en.properties
@@ -21,6 +21,7 @@ title.confirm.pass=Confirm password
 title.update.success=Update success
 title.update.fail=Update fail
 
+order.wedding.hall.type=Type lobby
 #validation
 #Common
 title.name=Name
@@ -55,6 +56,11 @@ user.mobile.error.length=mobile must have at least 10 numbers
 user.mobile.error.alreadyExists=phone number already exists
 user.avatar.error.empty=please choose avatar
 
+##Validaton order
+order.date.full=The lobby is full on this day
+order.quantty.table.max=Exceeding the number of tables in the lobby
+order.quantty.table.min=The number of tables is too small
+order.session.error=Please choose the time again
 #index
 intro.bg=Mang vẻ nổi bật và lộng lẫy tọa lạc tại cung đường Hoàng Văn Thụ náo nhiệt bậc nhất Sài \nGòn. Trung tâm tiệc cưới The ADORA Luxury được xây dựng theo hình dáng của viên kim cương sang\ntrọng. Cả tòa nhà mang phong cách châu Âu với 6 sảnh tiệc rộng lớn cùng sức chứa lên đến 3.500\nkhách.
 
@@ -95,6 +101,13 @@ intro.col.Conference=Hội nghị
 intro.col.Conference.h= Chưa nghĩ ra luôn
 intro.col.event=Sự kiện
 intro.col.event.h=Như 2 cái bên
+order.pay=Pay
+order.price.dish=Dish
+order.price.service=Service
+order.price.wedding.hall=Wedding Hall
+order.price.total=Total
 
+order.valid.date=Please select the date of the event
 
 weddinghall.status=Lobby is under repair
+header.order.detail=Order Detail
