--- a/QuanLyNhaHang/src/main/resources/messages_vi.properties
+++ b/QuanLyNhaHang/src/main/resources/messages_vi.properties
@@ -1,4 +1,4 @@
-page.size=3
+page.size=20
 title.select.lang=vi
 title.lang.en=Tiếng Anh
 title.lang.vi=Việt Nam
@@ -26,6 +26,9 @@ title.order.total=Tổng
 title.order.payment.status=Trạng thái
 title.order.payment.status.true=Đã thanh toán
 title.order.payment.status.false=Chưa thanh toán
+button.order.update.status=Xác nhận thanh toán
+button.order.update.status.false=Xác nhận
+button.order.update.status.true=Hủy xác nhận
 
 title.feedback=Góp ý
 title.feedback.send=Gửi góp ý
@@ -71,6 +74,18 @@ order.date.full=Sảnh đã kín lịch vào ngày này
 order.quantty.table.max=Vượt quá số lượng bàn của sảnh
 order.quantty.table.min=Số lượng bàn quá ít
 order.session.error=Vui lòng chọn lại thời gian
+
+#wedding hall
+wedding.hall.name.empty=Vui lòng nhập tên sảnh
+wedding.hall.name.invalid=Tên không được chứ kí tự đặc biệt
+wedding.hall.price.empty=Giá không được bỏ trống
+wedding.hall.price.min=Giá không được dưới 1.000.000VNĐ
+wedding.hall.price.max=Giá không được quá 10.000.000VNĐ
+wedding.hall.capacity.empty=Vui lòng nhập sức chứa
+wedding.hall.capacity.min=Không gian chứa không được quá 10 bàn
+wedding.hall.capacity.max=Không gian chứa không được quá 50 bàn
+wedding.hall.image.empty=Vui lòng chọn hình sảnh  
+
 
 #index
 intro.bg=Mang vẻ nổi bật và lộng lẫy tọa lạc tại cung đường Hoàng Văn Thụ náo nhiệt bậc nhất Sài \nGòn. Trung tâm tiệc cưới The ADORA Luxury được xây dựng theo hình dáng của viên kim cương sang\ntrọng. Cả tòa nhà mang phong cách châu Âu với 6 sảnh tiệc rộng lớn cùng sức chứa lên đến 3.500\nkhách.
@@ -149,7 +164,6 @@ order.price.wedding.hall=Sảnh
 order.price.total=Tổng cộng
 
 
-weddinghall.status=Sảnh đang trong tình trạng sửa chữa
 
 header.order.detail=Chi tiết hóa đơn
 
@@ -186,6 +200,8 @@ admin.hall.price=Giá [VNĐ]
 admin.hall.inputprice=Nhập mức giá
 admin.hall.describe=Thông tin thêm
 admin.hall.typedescribe=Nhập thông tin mô tả
+admin.hall.status=Trạng thái sảnh
+admin.hall.typeStatus=NHập trạng thái sảnh(Nếu có hư hỏng)
 admin.hall.capacity=Sức chứa (bàn)
 admin.hall.typecapacity=Sức chứa
 admin.hall.image=Ảnh mô tả
