--- a/QuanLyNhaHang/src/main/resources/messages_vi.properties
+++ b/QuanLyNhaHang/src/main/resources/messages_vi.properties
@@ -19,16 +19,16 @@ title.confirm.pass=X\u00e1c nh\u1eadn m\u1eadt kh\u1ea9u
 title.update.success=C\u1eadp nh\u1eadt th\u00e0nh c\u00f4ng
 title.update.fail=C\u1eadp nh\u1eadt th\u1ea5t b\u1ea1i
 
-title.order.id=Mã đơn
-title.order.date=Ngày
-title.order.typepay=Loại thanh toán
-title.order.total=Tổng
-title.order.payment.status=Trạng thái
-title.order.payment.status.true=Đã thanh toán
-title.order.payment.status.false=Chưa thanh toán
-button.order.update.status=Xác nhận thanh toán
-button.order.update.status.false=Xác nhận
-button.order.update.status.true=Hủy xác nhận
+title.order.id=M\u00e3 \u0111\u01a1n
+title.order.date=Ng\u00e0y
+title.order.typepay=Lo\u1ea1i thanh to\u00e1n
+title.order.total=T\u1ed5ng
+title.order.payment.status=Tr\u1ea1ng th\u00e1i
+title.order.payment.status.true=\u0110\u00e3 thanh to\u00e1n
+title.order.payment.status.false=Ch\u01b0a thanh to\u00e1n
+button.order.update.status=X\u00e1c nh\u1eadn thanh to\u00e1n
+button.order.update.status.false=X\u00e1c nh\u1eadn
+button.order.update.status.true=H\u1ee7y x\u00e1c nh\u1eadn
 
 
 title.feedback=G\u00f3p \u00fd
@@ -77,16 +77,15 @@ order.quantty.table.min=S\u1ed1 l\u01b0\u1ee3ng b\u00e0n qu\u00e1 \u00edt
 order.session.error=Vui l\u00f2ng ch\u1ecdn l\u1ea1i th\u1eddi gian
 
 #wedding hall
-wedding.hall.name.empty=Vui lòng nhập tên sảnh
-wedding.hall.name.invalid=Tên không được chứ kí tự đặc biệt
-wedding.hall.price.empty=Giá không được bỏ trống
-wedding.hall.price.min=Giá không được dưới 1.000.000VNĐ
-wedding.hall.price.max=Giá không được quá 10.000.000VNĐ
-wedding.hall.capacity.empty=Vui lòng nhập sức chứa
-wedding.hall.capacity.min=Không gian chứa không được quá 10 bàn
-wedding.hall.capacity.max=Không gian chứa không được quá 50 bàn
-wedding.hall.image.empty=Vui lòng chọn hình sảnh  
-
+wedding.hall.name.empty=Vui l\u00f2ng nh\u1eadp t\u00ean s\u1ea3nh
+wedding.hall.name.invalid=T\u00ean kh\u00f4ng \u0111\u01b0\u1ee3c ch\u1ee9 k\u00ed t\u1ef1 \u0111\u1eb7c bi\u1ec7t
+wedding.hall.price.empty=Gi\u00e1 kh\u00f4ng \u0111\u01b0\u1ee3c b\u1ecf tr\u1ed1ng
+wedding.hall.price.min=Gi\u00e1 kh\u00f4ng \u0111\u01b0\u1ee3c d\u01b0\u1edbi 1.000.000VN\u0110
+wedding.hall.price.max=Gi\u00e1 kh\u00f4ng \u0111\u01b0\u1ee3c qu\u00e1 10.000.000VN\u0110
+wedding.hall.capacity.empty=Vui l\u00f2ng nh\u1eadp s\u1ee9c ch\u1ee9a
+wedding.hall.capacity.min=Kh\u00f4ng gian ch\u1ee9a kh\u00f4ng \u0111\u01b0\u1ee3c qu\u00e1 10 b\u00e0n
+wedding.hall.capacity.max=Kh\u00f4ng gian ch\u1ee9a kh\u00f4ng \u0111\u01b0\u1ee3c qu\u00e1 50 b\u00e0n
+wedding.hall.image.empty=Vui l\u00f2ng ch\u1ecdn h\u00ecnh s\u1ea3nh
 
 #index
 intro.bg=Mang v\u1ebb n\u1ed5i b\u1eadt v\u00e0 l\u1ed9ng l\u1eaby t\u1ecda l\u1ea1c t\u1ea1i cung \u0111\u01b0\u1eddng Ho\u00e0ng V\u0103n Th\u1ee5 n\u00e1o nhi\u1ec7t b\u1eadc nh\u1ea5t S\u00e0i \nG\u00f2n. Trung t\u00e2m ti\u1ec7c c\u01b0\u1edbi The ADORA Luxury \u0111\u01b0\u1ee3c x\u00e2y d\u1ef1ng theo h\u00ecnh d\u00e1ng c\u1ee7a vi\u00ean kim c\u01b0\u01a1ng sang\ntr\u1ecdng. C\u1ea3 t\u00f2a nh\u00e0 mang phong c\u00e1ch ch\u00e2u \u00c2u v\u1edbi 6 s\u1ea3nh ti\u1ec7c r\u1ed9ng l\u1edbn c\u00f9ng s\u1ee9c ch\u1ee9a l\u00ean \u0111\u1ebfn 3.500\nkh\u00e1ch.
@@ -191,37 +190,36 @@ footer.copyright=\u00a9 Copyright 2018 Pingendo - All rights reserved.
 weddinghall.status=S\u1ea3nh \u0111ang trong t\u00ecnh tr\u1ea1ng s\u1eeda ch\u1eefa
 #admin
 
-header.admin.staff=Quản lý tài khoản
-header.admin.dishes=Quản lý món ăn 
-header.admin.service=Quản lý dịch vụ
-header.admin.order=Quản lý đơn đặt
-header.admin.report=Thống kê
-header.admin.hall=Quản lý sảnh
-admin.hall.search=Tìm kiếm sảnh
-admin.hall.add=Thêm sảnh
-admin.hall.edit=Chỉnh sửa
-admin.label.view=Chi tiết
-admin.label.namehall=Tên sảnh cưới
-admin.hall.typehall=Nhập sảnh cưới
-admin.hall.price=Giá [VNĐ]
-admin.hall.inputprice=Nhập mức giá
-admin.hall.describe=Thông tin thêm
-admin.hall.typedescribe=Nhập thông tin mô tả
-admin.hall.status=Trạng thái sảnh
-admin.hall.typeStatus=NHập trạng thái sảnh(Nếu có hư hỏng)
-admin.hall.capacity=Sức chứa (bàn)
-admin.hall.typecapacity=Sức chứa
-admin.hall.image=Ảnh mô tả
-admin.save=Lưu
-admin.delete=Xóa
-admin.dishes.name=Tên món ăn
-admin.dishes.typeName=Nhập tên món ăn
-admin.dishes.category=Loại món ăn
-admin.dishes.add=Thêm món 
-admin.service.name=Tên dịch vụ
-admin.service.typename=Nhập tên dịch vụ
-admin.service.add=Thêm dịch vụ
+header.admin.staff=Qu\u1ea3n l\u00fd t\u00e0i kho\u1ea3n
+header.admin.dishes=Qu\u1ea3n l\u00fd m\u00f3n \u0103n 
+header.admin.service=Qu\u1ea3n l\u00fd d\u1ecbch v\u1ee5
+header.admin.order=Qu\u1ea3n l\u00fd \u0111\u01a1n \u0111\u1eb7t
+header.admin.report=Th\u1ed1ng k\u00ea
+header.admin.hall=Qu\u1ea3n l\u00fd s\u1ea3nh
+admin.hall.search=T\u00ecm ki\u1ebfm s\u1ea3nh
+admin.hall.add=Th\u00eam s\u1ea3nh
+admin.hall.edit=Ch\u1ec9nh s\u1eeda
+admin.label.view=Chi ti\u1ebft
+admin.label.namehall=T\u00ean s\u1ea3nh c\u01b0\u1edbi
+admin.hall.typehall=Nh\u1eadp s\u1ea3nh c\u01b0\u1edbi
+admin.hall.price=Gi\u00e1 [VN\u0110]
+admin.hall.inputprice=Nh\u1eadp m\u1ee9c gi\u00e1
+admin.hall.describe=Th\u00f4ng tin th\u00eam
+admin.hall.typedescribe=Nh\u1eadp th\u00f4ng tin m\u00f4 t\u1ea3
+admin.hall.capacity=S\u1ee9c ch\u1ee9a (b\u00e0n)
+admin.hall.typecapacity=S\u1ee9c ch\u1ee9a
+admin.hall.image=\u1ea2nh m\u00f4 t\u1ea3
+admin.save=L\u01b0u
+admin.delete=X\u00f3a
+admin.dishes.name=T\u00ean m\u00f3n \u0103n
+admin.dishes.typeName=Nh\u1eadp t\u00ean m\u00f3n \u0103n
+admin.dishes.category=Lo\u1ea1i m\u00f3n \u0103n
+admin.dishes.add=Th\u00eam m\u00f3n 
+admin.service.name=T\u00ean d\u1ecbch v\u1ee5
+admin.service.typename=Nh\u1eadp t\u00ean d\u1ecbch v\u1ee5
+admin.service.add=Th\u00eam d\u1ecbch v\u1ee5
 admin.account.user=Nhan vien
+admin.account.add=Th\u00eam
 admin.account.cus=Khach hang
 admin.name=T\u00ean
 admin.birthday=Ng\u00e0y sinh
