--- a/QuanLyNhaHang/src/main/resources/messages_vi.properties
+++ b/QuanLyNhaHang/src/main/resources/messages_vi.properties
@@ -110,12 +110,12 @@ intro.slide.h4=\u0110a d\u1ea1ng v\u00e0 \u0111\u1eb3ng c\u1ea5p
 intro.slide.p5=D\u1ecbch v\u1ee5
 intro.slide.h5=Chu \u0111\u00e1o - Chuy\u00ean nghi\u1ec7p
 intro.col.wed=Ti\u1ec7c c\u01b0\u1edbi
-intro.col.wed.h=Ch\u01b0a ngh\u0129 ra
+intro.col.wed.h=Ch\u1ea5t l\u01b0\u1ee3ng d\u1ecbch v\u1ee5 tuy\u1ec7t v\u1eddi s\u1ebd l\u00e0m v\u1eeba l\u00f2ng qu\u00fd kh\u00e1ch
 intro.col.book=\u0110\u1eb7t b\u00e0n ngay
 intro.col.Conference=H\u1ed9i ngh\u1ecb
-intro.col.Conference.h=Ch\u01b0a ngh\u0129 ra lu\u00f4n
+intro.col.Conference.h=Ch\u1ea5t l\u01b0\u1ee3ng d\u1ecbch v\u1ee5 tuy\u1ec7t v\u1eddi s\u1ebd l\u00e0m v\u1eeba l\u00f2ng qu\u00fd kh\u00e1ch
 intro.col.event=S\u1ef1 ki\u1ec7n
-intro.col.event.h=Nh\u01b0 2 c\u00e1i b\u00ean
+intro.col.event.h=Ch\u1ea5t l\u01b0\u1ee3ng d\u1ecbch v\u1ee5 tuy\u1ec7t v\u1eddi s\u1ebd l\u00e0m v\u1eeba l\u00f2ng qu\u00fd kh\u00e1ch
 #Profile
 profile.title=Chi ti\u1ebft t\u00e0i kho\u1ea3n
 profile.title.image=\u1ea2nh \u0111\u1ea1i di\u1ec7n
@@ -189,7 +189,8 @@ footer.social.link=facebook.com/adoraVietNam
 footer.copyright=\u00a9 Copyright 2018 Pingendo - All rights reserved. 
 weddinghall.status=S\u1ea3nh \u0111ang trong t\u00ecnh tr\u1ea1ng s\u1eeda ch\u1eefa
 #admin
-
+admin.hall.total=Doanh thu
+admin.hall.count=S\u1ed1 l\u01b0\u1ee3ng \u0111\u1eb7t
 header.admin.staff=Qu\u1ea3n l\u00fd t\u00e0i kho\u1ea3n
 header.admin.dishes=Qu\u1ea3n l\u00fd m\u00f3n \u0103n 
 header.admin.service=Qu\u1ea3n l\u00fd d\u1ecbch v\u1ee5
