--- a/QuanLyNhaHang/src/main/resources/messages_en.properties
+++ b/QuanLyNhaHang/src/main/resources/messages_en.properties
@@ -1,113 +1,377 @@
 page.size=20
-
-title.select.lang=en
+title.select.lang=vi
 title.lang.en=English
 title.lang.vi=Vietnamese
-
 #title
 title.service=Service
-title.login=Login
+title.login=Log in
 title.register=Register
-title.booking=Book Party Now
+title.booking=Booking
 title.introduce=Introduce
 title.pass=Password
-title.dont.have.account=You don't have account? Sign up here
-title.logout=Logout
-title.infor=Personal information
+title.dont.have.account=You don't have account? Register now
+title.logout=Log out
+title.infor=Profile
 title.changePass=Change password
-title.history.order=Order history
+title.history.order=Buy history
 title.new.pass=New password
 title.confirm.pass=Confirm password
-title.update.success=Update success
-title.update.fail=Update fail
+title.update.success=successful
+title.update.fail=failed
 
-order.wedding.hall.type=Type lobby
+title.order.id=Order code
+title.order.date=Date
+title.order.typepay=Type payment
+title.order.total=Total
+title.order.payment.status=Status
+title.order.payment.status.true=completed payment
+title.order.payment.status.false=payment has not been completed
+button.order.update.status=Confirm payment
+button.order.update.status.false=confirm
+button.order.update.status.true=Cancel
+
+
+title.feedback=Feedback
+title.feedback.send=Send feedback
+title.feedback.placehoder=You can enter your comments here
+title.feedback.mess=Thanks for your comment
+
+
 #validation
 #Common
 title.name=Name
 title.birthday=Birthday
-title.mobile=Number phone
-
+title.mobile=Mobile
 #Dish
 dish.price.min=The price of the dish must not be less than 100,000 VND
 dish.price.max=The price of the dish cannot be more than 500,000 VND
-
+dish.add=Add
+dish.del=Delete
 #Service
 service.price.min=Service price is not less than 500,000 VND
 service.price.max=Service price cannot be over 30,000,000 VND
-
 #WeddingHall
 weddinghall.price.min=The lobby price must not be less than 1,000,000 VND
 weddinghall.price.max=The lobby price cannot be more than 5,000,000VND
-
 #User
-user.email.error=Email invalid
-user.email.error.empty=Please enter email
+user.email.error=Invalid email
+user.email.error.empty=Please enter your email
 user.email.error.alreadyExists=Email already exists
 user.name.error.empty=Please enter your name
 user.name.error=Name cannot contain special characters
-user.password.error.empty=Please enter a password
+user.password.error.empty=Please enter your password
 user.password.error.length=Password must be at least 8 characters
 user.password.error.invalid=Password must contain lowercase letters, uppercase letters, numbers and special characters
 user.confirmPassword.error.notequal=Please re-enter your password
-user.birthday.error.empty=Please enter your date of birth
-user.birthday.error.age=You must be 18 years old
-user.mobile.error.length=mobile must have at least 10 numbers
-user.mobile.error.alreadyExists=phone number already exists
-user.avatar.error.empty=please choose avatar
+user.birthday.error.empty=Please enter your birthday
+user.birthday.error.age=You must 18 years old
+user.mobile.error.length=Phone number must be 10 digits
+user.mobile.error.alreadyExists=Phone number already exists
+user.avatar.error.empty=Please choose an avatar
+
 
 ##Validaton order
-order.date.full=The lobby is full on this day
-order.quantty.table.max=Exceeding the number of tables in the lobby
+order.date.full=Lobby is full on this day
+order.quantty.table.max=Lobby's number of tables exceeded
 order.quantty.table.min=The number of tables is too small
-order.session.error=Please choose the time again
+order.session.error=Please choose a time again
+#wedding hall
+wedding.hall.name.empty=Please enter a hall name
+wedding.hall.name.invalid=Name cannot contain special characters
+wedding.hall.price.empty=Price cannot be blank
+wedding.hall.price.min=Price must not be less than 1,000,000VND
+wedding.hall.price.max=Price cannot exceed 10,000,000VND
+wedding.hall.capacity.empty=Please enter capacity
+wedding.hall.capacity.min=Space can accommodate no more than 10 tables
+wedding.hall.capacity.max=The space can't hold more than 50 tables
+wedding.hall.image.empty=Please select a lobby image
+
 #index
-intro.bg=Mang vẻ nổi bật và lộng lẫy tọa lạc tại cung đường Hoàng Văn Thụ náo nhiệt bậc nhất Sài \nGòn. Trung tâm tiệc cưới The ADORA Luxury được xây dựng theo hình dáng của viên kim cương sang\ntrọng. Cả tòa nhà mang phong cách châu Âu với 6 sảnh tiệc rộng lớn cùng sức chứa lên đến 3.500\nkhách.
-
-
-
-
-#Profile
-profile.title=Account Details
-profile.title.image=Profile Picture
-profile.upload.image=Upload new image
-profile.save=Save changes
-profile.edit=Edit
-profile.cancel=Cancel
-intro.1= Đẳng cấp và sang trọng
-intro.order= Đặt tiệc
-intro.adora.intro=Đẳng cấp cho những điều quan trọng nhất
-intro.main=The ADORA Nguyễn Kiệm có vị trí vô cùng thuận tiện, tọa lạc ngay giao lộ huyết mạch Phạm\nVăn Đồng tiếp nối các quận huyện trung tâm thành phố. The ADORA Nguyễn Kiệm được thiết kế theo phong\ncách kiến trúc La Mã với các sảnh đường rộng lớn, được lựa chọn cho những buổi sự kiện trọng đại, từ/ntiệc cưới, tiệc cá nhân tới các Hội nghị, hội thảo đẳng cấp.
+intro.bg=Mang v\u1ebb n\u1ed5i b\u1eadt v\u00e0 l\u1ed9ng l\u1eaby t\u1ecda l\u1ea1c t\u1ea1i cung \u0111\u01b0\u1eddng Ho\u00e0ng V\u0103n Th\u1ee5 n\u00e1o nhi\u1ec7t b\u1eadc nh\u1ea5t S\u00e0i \nG\u00f2n. Trung t\u00e2m ti\u1ec7c c\u01b0\u1edbi The ADORA Luxury \u0111\u01b0\u1ee3c x\u00e2y d\u1ef1ng theo h\u00ecnh d\u00e1ng c\u1ee7a vi\u00ean kim c\u01b0\u01a1ng sang\ntr\u1ecdng. C\u1ea3 t\u00f2a nh\u00e0 mang phong c\u00e1ch ch\u00e2u \u00c2u v\u1edbi 6 s\u1ea3nh ti\u1ec7c r\u1ed9ng l\u1edbn c\u00f9ng s\u1ee9c ch\u1ee9a l\u00ean \u0111\u1ebfn 3.500\nkh\u00e1ch.
+intro.1=\u0110\u1eb3ng c\u1ea5p v\u00e0 sang tr\u1ecdng
+intro.order=\u0110\u1eb7t ti\u1ec7c
+intro.adora.intro=\u0110\u1eb3ng c\u1ea5p cho nh\u1eefng \u0111i\u1ec1u quan tr\u1ecdng nh\u1ea5t
+intro.main=The ADORA Nguy\u1ec5n Ki\u1ec7m c\u00f3 v\u1ecb tr\u00ed v\u00f4 c\u00f9ng thu\u1eadn ti\u1ec7n, t\u1ecda l\u1ea1c ngay giao l\u1ed9 huy\u1ebft m\u1ea1ch Ph\u1ea1m\nV\u0103n \u0110\u1ed3ng ti\u1ebfp n\u1ed1i c\u00e1c qu\u1eadn huy\u1ec7n trung t\u00e2m th\u00e0nh ph\u1ed1. The ADORA Nguy\u1ec5n Ki\u1ec7m \u0111\u01b0\u1ee3c thi\u1ebft k\u1ebf theo phong\nc\u00e1ch ki\u1ebfn tr\u00fac La M\u00e3 v\u1edbi c\u00e1c s\u1ea3nh \u0111\u01b0\u1eddng r\u1ed9ng l\u1edbn, \u0111\u01b0\u1ee3c l\u1ef1a ch\u1ecdn cho nh\u1eefng bu\u1ed5i s\u1ef1 ki\u1ec7n tr\u1ecdng \u0111\u1ea1i, t\u1eeb/nti\u1ec7c c\u01b0\u1edbi, ti\u1ec7c c\u00e1 nh\u00e2n t\u1edbi c\u00e1c H\u1ed9i ngh\u1ecb, h\u1ed9i th\u1ea3o \u0111\u1eb3ng c\u1ea5p.
 intro.adora=The Adora
 intro.menu=Menu
-intro.appetizer=Món khai vị
-intro.dishes.main=Món chính
-intro.dishes.dessert=Món tráng miệng
-intro.slide.p1=Thoải mái như ở nhà
-intro.slide.h1=Sang trọng và lộng lẫy
-intro.slide.view=Xem thư viện ảnh
-intro.slide.p2=Hội nghị
-intro.slide.h2=Đẳng cấp - Sang trọng 
-intro.slide.p3=Tiệc cưới
-intro.slide.h3=Bắt trọn từng khoảng khắc
+intro.appetizer=M\u00f3n khai v\u1ecb
+intro.dishes.main=M\u00f3n ch\u00ednh
+intro.dishes.dessert=M\u00f3n tr\u00e1ng mi\u1ec7ng
+intro.slide.p1=Tho\u1ea3i m\u00e1i nh\u01b0 \u1edf nh\u00e0
+intro.slide.h1=Sang tr\u1ecdng v\u00e0 l\u1ed9ng l\u1eaby
+intro.slide.view=Xem th\u01b0 vi\u1ec7n \u1ea3nh
+intro.slide.p2=H\u1ed9i ngh\u1ecb
+intro.slide.h2=\u0110\u1eb3ng c\u1ea5p - Sang tr\u1ecdng 
+intro.slide.p3=Ti\u1ec7c c\u01b0\u1edbi
+intro.slide.h3=B\u1eaft tr\u1ecdn t\u1eebng kho\u1ea3ng kh\u1eafc
 intro.slide.p4=Menu
-intro.slide.h4=Đa dạng và đẳng cấp
-intro.slide.p5=Dịch vụ
-intro.slide.h5=Chu đáo - Chuyên nghiệp
-intro.col.wed=Tiệc cưới
-intro.col.wed.h=Chưa nghĩ ra
-intro.col.book=Đặt bàn ngay
-intro.col.Conference=Hội nghị
-intro.col.Conference.h= Chưa nghĩ ra luôn
-intro.col.event=Sự kiện
-intro.col.event.h=Như 2 cái bên
-order.pay=Pay
-order.price.dish=Dish
-order.price.service=Service
-order.price.wedding.hall=Wedding Hall
-order.price.total=Total
+intro.slide.h4=\u0110a d\u1ea1ng v\u00e0 \u0111\u1eb3ng c\u1ea5p
+intro.slide.p5=D\u1ecbch v\u1ee5
+intro.slide.h5=Chu \u0111\u00e1o - Chuy\u00ean nghi\u1ec7p
+intro.col.wed=Ti\u1ec7c c\u01b0\u1edbi
+intro.col.wed.h=Ch\u1ea5t l\u01b0\u1ee3ng d\u1ecbch v\u1ee5 tuy\u1ec7t v\u1eddi s\u1ebd l\u00e0m v\u1eeba l\u00f2ng qu\u00fd kh\u00e1ch
+intro.col.book=\u0110\u1eb7t b\u00e0n ngay
+intro.col.Conference=H\u1ed9i ngh\u1ecb
+intro.col.Conference.h=Ch\u1ea5t l\u01b0\u1ee3ng d\u1ecbch v\u1ee5 tuy\u1ec7t v\u1eddi s\u1ebd l\u00e0m v\u1eeba l\u00f2ng qu\u00fd kh\u00e1ch
+intro.col.event=S\u1ef1 ki\u1ec7n
+intro.col.event.h=Ch\u1ea5t l\u01b0\u1ee3ng d\u1ecbch v\u1ee5 tuy\u1ec7t v\u1eddi s\u1ebd l\u00e0m v\u1eeba l\u00f2ng qu\u00fd kh\u00e1ch
+#Profile
+profile.title=Chi ti\u1ebft t\u00e0i kho\u1ea3n
+profile.title.image=\u1ea2nh \u0111\u1ea1i di\u1ec7n
+profile.upload.image=C\u1eadp nh\u1eadt \u1ea3nh \u0111\u1ea1i di\u1ec7n
+profile.save=L\u01b0u thay \u0111\u1ed5i
+profile.edit=Ch\u1ec9nh s\u1eeda
+profile.cancel=Tho\u00e1t
+#order
+order.pay.type=Ph\u01b0\u01a1ng th\u1ee9c thanh to\u00e1n:
+order.type.money= Ti\u1ec1n m\u1eb7t
+order.service=D\u1ecbch v\u1ee5
+order.book.party=\u0110\u1eb6T TI\u1ec6C 
+order.book.info=Th\u00f4ng tin \u0111\u01a1n \u0111\u1eb7t
+order.wedding.hall.type=Lo\u1ea1i s\u1ea3nh
+order.book.choose=Ch\u1ecdn...
+order.book.wedding=Ti\u1ec7c c\u01b0\u1edbi
+order.book.conference=H\u1ed9i ngh\u1ecb
+order.book.event=S\u1ef1 ki\u1ec7n
+order.valid.date=Vui l\u00f2ng ch\u1ecdn ng\u00e0y t\u1ed5 ch\u1ee9c
+order.book.date=Ng\u00e0y t\u1ed5 ch\u1ee9c
+order.type.day.1=S\u00e1ng
+order.type.day.2=Tr\u01b0a
+order.type.day.3=T\u1ed1i
+order.book.time=Th\u1eddi gian
+order.valid.time=Vui l\u00f2ng nh\u1eadp th\u1eddi gian t\u1ed5 ch\u1ee9c
+order.book.count=S\u1ed1 l\u01b0\u1ee3ng b\u00e0n
+oder.valid.count=Vui l\u00f2ng nh\u1eadp s\u1ed1 l\u01b0\u1ee3ng b\u00e0n
+order.book.note=Ghi ch\u00fa
+order.book.total=T\u1ed5ng (VN\u0110)
+order.continue=Ti\u1ebfp t\u1ee5c
+order.dish.drink=\u0110\u1ed3 u\u1ed1ng
+order.choose.service=Ch\u1ecdn d\u1ecbch v\u1ee5
+order.hall.name=M\u1ed9t chi\u1ebfc s\u1ea3nh th\u1eadt lung linh
+order.hall.describe=Ch\u00fang t\u00f4i c\u00f3 \u0111a d\u1ea1ng s\u1ef1 l\u1ef1a ch\u1ecdn
+order.hall.addbtn=Kh\u00e1m ph\u00e1 n\u00e0o
+order.menu.create=L\u00ean th\u1ef1c \u0111\u01a1n
+order.menu=th\u1ef1c \u0111\u01a1n
+order.hall.capacity=S\u1ee9c ch\u1ee9a
+order.hall.price=Gi\u00e1
+order.choose.hall=Ch\u1ecdn s\u1ea3nh n\u00e0y
+order.hall.title=Ch\u1ecdn s\u1ea3nh c\u01b0\u1edbi
+order.close=\u0110\u00f3ng
 
-order.valid.date=Please select the date of the event
+order.pay=Thanh to\u00e1n
+order.price.dish=M\u00f3n \u0103n
+order.price.service=D\u1ecbch v\u1ee5
+order.price.wedding.hall=S\u1ea3nh
+order.price.total=T\u1ed5ng c\u1ed9ng [,000 VN\u0110]
+
+
+
+weddinghall.status=S\u1ea3nh \u0111ang trong t\u00ecnh tr\u1ea1ng s\u1eeda ch\u1eefa
+
+
+header.order.detail=X\u00e1c nh\u1eadn thanh to\u00e1n
+
+
+#staff
+header.staff.dishes=M\u00f3n \u0103n
+header.staff.hall=T\u1ea5t c\u1ea3 s\u1ea3nh
+header.staff.order=\u0110\u01a1n \u0111\u1eb7t ti\u1ec7c
+header.staff.service=D\u1ecbch v\u1ee5
+#footer
+footer.contact=Li\u00ean h\u1ec7
+footer.mobile=0947549001
+footer.email=info@adora.com
+footer.where=\u0110\u1ecba \u0111i\u1ec3m
+footer.map=371 Nguy\u1ec5n Ki\u1ec7m - G\u00f2 V\u1ea5p - H\u1ed3 Ch\u00ed Minh
+footer.social=M\u1ea1ng x\u00e3 h\u1ed9i
+footer.social.link=facebook.com/adoraVietNam
+footer.copyright=\u00a9 Copyright 2018 Pingendo - All rights reserved. 
+weddinghall.status=S\u1ea3nh \u0111ang trong t\u00ecnh tr\u1ea1ng s\u1eeda ch\u1eefa
+#admin
+admin.hall.total=Doanh thu
+admin.hall.count=S\u1ed1 l\u01b0\u1ee3ng \u0111\u1eb7t
+header.admin.staff=Qu\u1ea3n l\u00fd t\u00e0i kho\u1ea3n
+header.admin.dishes=Qu\u1ea3n l\u00fd m\u00f3n \u0103n 
+header.admin.service=Qu\u1ea3n l\u00fd d\u1ecbch v\u1ee5
+header.admin.order=Qu\u1ea3n l\u00fd \u0111\u01a1n \u0111\u1eb7t
+header.admin.report=Th\u1ed1ng k\u00ea
+header.admin.hall=Qu\u1ea3n l\u00fd s\u1ea3nh
+admin.hall.search=T\u00ecm ki\u1ebfm s\u1ea3nh
+admin.hall.add=Th\u00eam s\u1ea3nh
+admin.hall.edit=Ch\u1ec9nh s\u1eeda
+admin.label.view=Chi ti\u1ebft
+admin.label.namehall=T\u00ean s\u1ea3nh c\u01b0\u1edbi
+admin.hall.typehall=Nh\u1eadp s\u1ea3nh c\u01b0\u1edbi
+admin.hall.price=Gi\u00e1 [VN\u0110]
+admin.hall.inputprice=Nh\u1eadp m\u1ee9c gi\u00e1
+admin.hall.describe=Th\u00f4ng tin th\u00eam
+admin.hall.typedescribe=Nh\u1eadp th\u00f4ng tin m\u00f4 t\u1ea3
+admin.hall.capacity=S\u1ee9c ch\u1ee9a (b\u00e0n)
+admin.hall.typecapacity=S\u1ee9c ch\u1ee9a
+admin.hall.image=\u1ea2nh m\u00f4 t\u1ea3
+admin.save=L\u01b0u
+admin.delete=X\u00f3a
+admin.dishes.name=T\u00ean m\u00f3n \u0103n
+admin.dishes.typeName=Nh\u1eadp t\u00ean m\u00f3n \u0103n
+admin.dishes.category=Lo\u1ea1i m\u00f3n \u0103n
+admin.dishes.add=Th\u00eam m\u00f3n 
+admin.service.name=T\u00ean d\u1ecbch v\u1ee5
+admin.service.typename=Nh\u1eadp t\u00ean d\u1ecbch v\u1ee5
+admin.service.add=Th\u00eam d\u1ecbch v\u1ee5
+admin.account.user=Nh\u00e2n vi\u00ean
+admin.account.add=Th\u00eam
+admin.account.cus=Kh\u00e1ch h\u00e0ng
+admin.name=T\u00ean
+admin.birthday=Ng\u00e0y sinh
+admin.mobile=\u0110i\u1ec7n tho\u1ea1i
+admin.email=Email   
+admin.hall=S\u1ea3nh
+admin.time=Th\u1eddi gian
+order.list=Danh s\u00e1ch \u0111\u01a1n \u0111\u1eb7t
+statis.today.count=T\u1ed5ng \u0111\u01a1n \u0111\u1eb7t th\u00e1ng:
+statis.today.money=T\u1ed5ng ti\u1ec1n th\u00e1ng:
+statis.label.time=Ch\u1ecdn th\u00e1ng \u0111\u1ec3 xem :
+intro.bg=Striking and splendid look, located at the busiest street of Hoang Van Thu in Saigon \nGon. The ADORA Luxury wedding center is built in the shape of a luxurious diamond. The whole building is European-style with 6 large banquet halls with a capacity of up to 3,500\n guests.
+intro.1=Classy and luxurious
+intro.order=Party Order
+intro.adora.intro=Class for what matters most
+intro.main=The ADORA Nguyen Kiem has a very convenient location, located at the arterial intersection of Pham\nVan Dong connecting the districts of the city center. The ADORA Nguyen Kiem is designed in Roman architectural style with large halls, selected for important events, from weddings, private parties to high-class conferences and seminars. .
+intro.adora=The Adora
+intro.menu=Menu
+intro.appetizer=Appetizer
+intro.dishes.main=Main course
+intro.dishes.dessert=Dessert
+intro.slide.p1=Comfortable at home
+intro.slide.h1=Luxury and gorgeous
+intro.slide.view=View Gallery
+intro.slide.p2=Conference
+intro.slide.h2=Class - Luxury
+intro.slide.p3=Wedding Party
+intro.slide.h3=Capture every moment
+intro.slide.p4=Menu
+intro.slide.h4=Various and classy
+intro.slide.p5=Services
+intro.slide.h5=Attentive - Professional
+intro.col.wed=Wedding party
+intro.col.wed.h=Excellent service quality will satisfy you
+intro.col.book=Book a table now
+intro.col.Conference=Conference
+intro.col.Conference.h=Excellent service quality will satisfy you
+intro.col.event=Event
+intro.col.event.h=Excellent service quality will satisfy you
+#Profile
+profile.title=Account details
+profile.title.image=Available image
+profile.upload.image=Update profile picture
+profile.save=Save Changes
+profile.edit=Edit
+profile.cancel=Exit
+#order
+order.pay.type=Payment method:
+order.type.money=Cash
+order.service=Service
+order.book.party=BOOK PARTY
+order.book.info=Order Information
+order.wedding.hall.type=Lobby type
+order.book.choose=Select...
+order.book.wedding=Wedding party
+order.book.conference=Conference
+order.book.event=Event
+order.valid.date=Please select an event date
+order.book.date=Event date
+order.type.day.1=Morning
+order.type.day.2=Noon
+order.type.day.3=Evening
+order.book.time=Time
+order.valid.time=Please enter event time
+order.book.count=Number of tables
+oder.valid.count=Please enter the number of tables
+order.book.note=Notes
+order.book.total=Total (VND)
+order.continue=Continue
+order.dish.drink=Beverages
+order.choose.service=Select service
+order.hall.name=A shimmering lobby
+order.hall.describe=We have a variety to choose from
+order.hall.addbtn=Let's explore
+order.menu.create=Make a menu
+order.menu=menu
+order.hall.capacity=Capacity
+order.hall.price=Price
+order.choose.hall=Select this lobby
+order.hall.title=Select wedding hall
+order.close=Close
+
+order.pay=Payment
+order.price.dish=Food
+order.price.service=Service
+order.price.wedding.hall=Lobby
+order.price.total=Total [,000 VND]
+
+
 
 weddinghall.status=Lobby is under repair
-header.order.detail=Order Detail
+
+
+header.order.detail=Payment Confirmation
+
+
+#staff
+header.staff.dishes=Food
+header.staff.hall=All lobby
+header.staff.order=Banquet Orders
+header.staff.service=Service
+#footer
+footer.contact=Contact
+footer.mobile=0947549001
+footer.email=info@adora.com
+footer.where=Location
+footer.map=371 Nguyen Kiem - Go Vap - Ho Chi Minh
+footer.social=Social Network
+footer.social.link=facebook.com/adoraVietNam
+footer.copyright=\u00a9 Copyright 2018 Pingendo - All rights reserved.
+weddinghall.status=Lobby is under repair
+#admin
+admin.hall.total=Revenue
+admin.hall.count=Booking Quantity
+header.admin.staff=Account Management
+header.admin.dishes=Manage dishes
+header.admin.service=Service Management
+header.admin.order=Manage orders
+header.admin.report=Statistics
+header.admin.hall=Lobby Manager
+admin.hall.search=Lobby Search
+admin.hall.add=Add lobby
+admin.hall.edit=Edit
+admin.label.view=Details
+admin.label.namehall=Wedding hall name
+admin.hall.typehall=Enter the wedding hall
+admin.hall.price=Price [VND]
+admin.hall.inputprice=Enter price
+admin.hall.describe=More Info
+admin.hall.typedescribe=Enter description
+admin.hall.capacity=Capacity (tables)
+admin.hall.typecapacity=Capacity
+admin.hall.image=Description image
+admin.save=Save
+admin.delete=Delete
+admin.dishes.name=Name of dish
+admin.dishes.typeName=Enter dish name
+admin.dishes.category=Type of dish
+admin.dishes.add=Add dishes
+admin.service.name=Service name
+admin.service.typename=Enter service name
+admin.service.add=Add Service
+admin.account.user=Employees
+admin.account.add=Add
+admin.account.cus=Customers
+admin.name=Name
+admin.birthday=Birthday
+admin.mobile=Phone
+admin.email=Email
+admin.hall=Lobby
+admin.time=Time
+order.list=List of orders
+statis.today.count=Monthly Orders:
+statis.today.money=Monthly Amount:
+statis.label.time=Select month to view :
